Fixed issue with overflowing grid

--- a/src/scss/components/_hexagon-grid.scss
+++ b/src/scss/components/_hexagon-grid.scss
@@ -9,6 +9,7 @@ $hexagon-inner-scale: 0.95;
   display: none;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 
   &.active {
     display: block;
