--- a/src/scss/components/_square-grid.scss
+++ b/src/scss/components/_square-grid.scss
@@ -2,6 +2,7 @@
   display: none;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 
   &.active {
     display: block;
